--- a/lecturenotesclass10.Rmd
+++ b/lecturenotesclass10.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Introduction to probability"
-author: ""
+author: "Maggie Brooks"
 date: ""
 output: html_document
 editor_options: 
@@ -49,17 +49,22 @@ xtabs(~ Treatment + Improved, data = Arthritis) %>%
 ```
 
 - How many patients were enrolled in the clinical trial?
+84 patients
 
 - What is the probability a randomly selected patient received the placebo?
+43/84
 
 - What is the probability a randomly selected patient received the placebo
   and had a marked improvement?
+7/84
   
 - What is the probability a randomly selected patient received the placebo
   and the treatment?
+0
   
 - What is the probability a randomly selected patient had some improvement or
   was on the treatment?
+48/84
 
 ## Using computer simulations to calculate probabilities
 
