--- a/lecturenotesclass10.Rmd
+++ b/lecturenotesclass10.Rmd
@@ -106,6 +106,7 @@ prop.table(counts)
 ```
 
 How close is this value to the "true" probability?
+It should be pretty close to the true probability because there are only 3 options are the sample size is very large (red=0.5, white=0.125, blue=0.375)
 
 **To summarize our process:**
 
@@ -122,6 +123,7 @@ color if we make two draws with replacement? We haven't discussed how to
 compute this theoretically yet, but this is what computers are good at.
 
 Before we do this, what is your guess as to what the probability will be?
+I predict it to be the sum of the following (0.5*0.5)+(0.125*0.125)+(0.375*0.375)
 
 We'll still use `sample()` to run our simulation many times, but we'll
 use `dplyr` functions to compute the relative frequencies.
@@ -163,15 +165,23 @@ Perform a simulation to compute this empirical probability.
 Write down your guess to the answer before you calculate it.
 
 ```{r simulate_rolls}
-
+roll_results <- tibble(
+  die_1 = replicate(n = 10000, expr = sample(1:6, size=1)),
+  die_2 = replicate(n = 10000, expr = sample(1:6, size=1))
+)
 ```
 
 ```{r identify_events}
-
+roll_results <- roll_results %>%
+  mutate(event_1 = die_1^2 == die_2,
+         event_2 = abs(die_1-die_2)==4)
+roll_results
 ```
 
 ```{r summarize_rolls}
-
+roll_results %>%
+  summarize(event_1_prob = mean(event_1),
+            event_2_prob = mean(event_2))
 ```
 
 ## Additional Resources-please look at before Weds.
